--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoodOper - ระบบจัดการบิลและสลิปอัจฉริยะ</title>
+    <title>GoodOper Bill Pro - ระบบจัดการบิลและสลิปอัจฉริยะ</title>
     <meta name="description" content="จัดการบิลและสลิปธนาคารด้วยเทคโนโลยี OCR อัจฉริยะ แม่นยำ รวดเร็ว และเป็นระเบียบ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
