--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billora | เข้าสู่ระบบ</title>
+    <title>Bill Pro | เข้าสู่ระบบ</title>
     <script src="/js/tailwind.min.js"></script>
     <link href="/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
